--- a/assets/css/default_slider.css
+++ b/assets/css/default_slider.css
@@ -1,6 +1,7 @@
 /**
  * sliders
  */
+
 .sliders{
 	position:absolute;
 	max-height:336px;
@@ -15,12 +16,22 @@
 	font-size:2.4em;
 	font-weight:300;
 	line-height:1em;
+
 }
 .slider-paragraph{
 	font-size:1em;
-	line-height:1em;
+	line-height:1.4em;
+
 }
 .sliders .btn-primary{
 	background:#FEBD00;
 	padding: 10% 20%;
+
+}
+
+@media only screen and (max-width: 840px) {
+	.slider-paragraph{
+		font-size: 0.6em !important;
+		line-height:20px;
+	}
 }
