--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -12,6 +12,10 @@ hr.line {
 	margin-right: 20px !important;
 }
 
+.right {
+
+}
+
 
 /* ----Start------ */
 
@@ -213,6 +217,7 @@ ul#items h3{
 	background-color: #5F9CD4;
 	color:#fff;
 	font-style: italic;
+	max-width: 198px;
 }	
 ul#items .info{color:#999;text-shadow:#f1f1f1 0 1px 0;}	
 ol#pagination{position:relative;text-align:center;}
@@ -667,27 +672,57 @@ a.article-lista-noticias {
 	width: 100%;
 	padding: 20px;
 	display: block;
-	background-color: #f1f1f1;
 	text-decoration: none;
 	-webkit-border-radius: 5px 5px 5px 5px;
 	border-radius: 5px 5px 5px 5px;
 	margin-top: 10px;
 	display: block;
+	border: 1px solid #fff;
 }
 a.article-lista-noticias:hover {
-	color: #333;
-	background-color: #D4D4D4;
 	-webkit-transition: all 0.6s ease;
 	-moz-transition: all 0.6s ease;
 	-ms-transition: all 0.6s ease;
 	-o-transition: all 0.6s ease;
 	transition: all 0.6s ease;
+	border: 1px solid #666;
+	color:#666;
+
 }
 
 a.article-lista-noticias h4 {
-	/*font-family: 'Open Sans Bold';*/
+	font-family: 'Open Sans Bold';
 	font-weight: bold;
 	color: #333;
+}
+
+.data-noticias {
+	min-height: 100px;
+}
+
+.data-noticias span {
+	width: 100%;
+	display: block;
+	font-size: 1.7em;
+	text-align: center;
+}
+
+#ultimas-noticias ul#lista-noticias {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#ultimas-noticias ul#lista-noticias li a {
+	text-transform: uppercase;
+	display: block;
+	padding: 1px 10px;
+	border-bottom: 1px solid #ccc;
+}
+
+#ultimas-noticias ul#lista-noticias li a:hover {
+	color: #fff !important;
+	border: 1px solid #ccc;
 }
 
 .paginacao {
