--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -757,6 +757,7 @@ a.article-lista-noticias h4 {
 /*--------- PAGES ARTIGOS -----------*/
 #autor-artigo {
 	width: 100%;
+	min-height: 140px;
 	border-left: 4px solid #417DB2;
 	overflow: auto;
 	margin: 50px 0;
