Area do Aluno - Home

--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -13,10 +13,21 @@ hr.line {
 }
 
 .right {
-
+}
+.white {
+	color: white !important;
 }
 
-
+#carrinho-compras {
+	margin: 2em 0;
+}
+.quantidade-carrinho {
+	background-color: #3D89CF;
+	-webkit-border-radius: 50px 50px 50px 50px;
+	border-radius: 50px 50px 50px 50px;
+	padding: 5px 10px;
+	color: #fff !important;
+}
 /* ----Start------ */
 
 .container {
@@ -256,6 +267,13 @@ h2.linha-h2 {
 }
 
 h2.title-professores {
+	line-height: 5.9rem;
+	padding-left: 60px;
+	background:transparent url('../imgs/title-prof.png') no-repeat 0 0;
+	border-bottom: 1px solid #ccc;
+}
+
+h2.title-aluno {
 	line-height: 5.9rem;
 	padding-left: 60px;
 	background:transparent url('../imgs/title-prof.png') no-repeat 0 0;
@@ -753,7 +771,6 @@ a.article-lista-noticias h4 {
 	margin-bottom: 35px;
 }
 
-
 /*--------- PAGES ARTIGOS -----------*/
 #autor-artigo {
 	width: 100%;
@@ -776,3 +793,126 @@ a.article-lista-noticias h4 {
 	padding: 1em 0 0 0;
 }
 
+
+/*--------- AREA DO ALUNO -----------*/
+.titulo-area-aluno {
+
+}
+
+nav#nav-area-aluno {
+	margin-bottom: 2em;
+}
+ul#menu-aluno {
+	width: 100%;
+	list-style: none;
+	overflow: auto;
+	margin: 0;
+	padding: 0;
+	border: 1px solid #ccc;
+
+}
+
+ul#menu-aluno li {
+	display: inline-block;
+	float: left;
+}
+
+ul#menu-aluno li a {
+	padding: 1.5em 1.5em 1.5em 3.2em;
+	display: block;
+	color: #999;
+	font-size: 0.8em;
+	border-right: 1px solid #ccc;
+}
+
+ul#menu-aluno li a:hover {
+	background-color: #f1f1f1 !important;
+}
+
+ul#menu-aluno li a.aluno {
+	background: url('../imgs/user-aluno.png') no-repeat 15px center;
+}
+ul#menu-aluno li a.cursos {
+	background: url('../imgs/user-curso.png') no-repeat 15px center;
+}
+ul#menu-aluno li a.perguntas {
+	background: url('../imgs/user-perguntas.png') no-repeat 15px center;
+}
+ul#menu-aluno li a.mensagens {
+	background: url('../imgs/user-mensagens.png') no-repeat 15px center;
+	position: relative;
+}
+ul#menu-aluno li a.mensagens .numeros {
+	position: absolute;
+	top: 0;
+	right: 2%;
+	background-color: #3D89CF;
+	-webkit-border-radius: 50px 50px 50px 50px;
+	border-radius: 50px 50px 50px 50px;
+	padding: 2px 9px;
+	color: #fff !important;
+	font-size: 0.8em;
+}
+ul#menu-aluno li a.comprar {
+	background: url('../imgs/user-comprar.png') no-repeat 15px center;
+}
+ul#menu-aluno li a.dados {
+	background: url('../imgs/user-dados.png') no-repeat 15px center;
+}
+ul#menu-aluno li a.preferencias {
+	background: url('../imgs/user-preferencias.png') no-repeat 15px center;
+}
+
+#tabela-mensagens {
+	margin: 20px 0;
+}
+
+#pedidos-abertos, #pedidos-concluidos {
+	text-align: center;
+	width: 48%;
+	float: left;
+}
+
+a.numeros-pedidos {
+	background-color: #3D89CF;
+	-webkit-border-radius: 50px 50px 50px 50px;
+	border-radius: 50px 50px 50px 50px;
+	padding: 8px 25px;
+	color: #fff !important;
+	font-size: 3.8em;
+	margin: 10px 0;
+	display: inline-block;
+	font-family: 'Open Sans Bold';
+}
+
+#pedidos-concluidos {
+
+}
+
+ul#lista-perguntas-frequentes {
+	list-style-type: decimal;
+	margin: 0;
+	padding: 0 0 0 5%;
+	width: 100%;
+
+}
+
+ul#lista-perguntas-frequentes li a {
+	font-size: 0.8em;
+	text-decoration: none;
+}
+
+ul#lista-perguntas-frequentes li a:hover {
+	text-decoration: underline;
+}
+a.ver-todas-simples {
+	display: block;
+	margin: 15px 10px;
+	text-decoration: underline;
+	color:#333;
+	float: right;
+}
+a.ver-todas-simples:hover {
+	text-decoration: none;
+	color:#333;
+}
