Ultimas Aulas - Home Aluno

--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -916,3 +916,53 @@ a.ver-todas-simples:hover {
 	text-decoration: none;
 	color:#333;
 }
+
+#legenda-aulas {
+	margin: 15px 0;
+}
+.concluido, .andamento, .nao-iniciado, .expirado {
+	color: #999;
+ 	padding: 6px;
+ 	float: left;
+}
+.concluido p, .andamento p, .nao-iniciado p, .expirado p{
+	margin: 0;
+	padding: 0;
+}
+.concluido {
+ 	border-left: 8px solid #5ea20d;
+}
+.andamento {
+ 	border-left: 8px solid #2980b9;	
+}
+.nao-iniciado {
+	 border-left: 8px solid #F1C411;
+}
+.expirado {
+ 	border-left: 8px solid #E74C3C;
+}
+
+.revisar {
+	background-color: #ccc;
+	color: #666 !important;
+	padding: 5px;
+	margin-top: 5px;
+	display: block;
+	text-align: center;
+}
+.revisar:hover {
+	background-color: #245F93;
+	color: #fff !important;
+}
+.iniciar {
+	background-color: #ccc;
+	color: #666 !important;
+	padding: 5px;
+	margin-top: 2px;
+	display: block;
+	text-align: center;
+}
+.iniciar:hover {
+	color: #fff !important;
+	background-color: #245F93;
+}
