--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -28,6 +28,9 @@ hr.line {
 	padding: 5px 10px;
 	color: #fff !important;
 }
+.margin-top {
+ margin-top: 15px;
+}
 /* ----Start------ */
 
 .container {
