--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -3,6 +3,9 @@ hr.line {
 	background: #ccc !important;
 	margin: 5px 0 15px 0 !important;
 }
+.metro {
+
+}
 .clear {
 	clear: both;
 }
@@ -36,7 +39,58 @@ hr.line {
 	float: right;
 }
 
+.link-padrao {
+	text-align: right;
+	clear: both;
+	padding: 25px 10px;
+}
+.link-padrao a {
+	color: #fff !important;
+	background-color: #3D89CF !important;
+	padding: 10px 35px !important;
+	width: 100%;
+	font-size: 1em;
+	text-transform: uppercase;
+	text-align: center;
+	font-family: 'Open Sans Bold';
+	-webkit-box-shadow: 2px 2px 1px 1px #245F93;
+	box-shadow: 2px 2px 1px 1px #245F93;
+}
+.link-padrao a:hover {
+	background-color: #245F93 !important;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
 
+
+
+#ver-noticias {
+	display: block;
+	background-color: #3D89CF !important;
+	padding: 10px 0 !important;
+	margin-top: 15px;
+	font-size: 0.9em;
+	text-transform: uppercase;
+	text-align: center;
+	font-family: 'Open Sans Bold';
+	-webkit-box-shadow: 2px 2px 1px 1px #245F93;
+	box-shadow: 2px 2px 1px 1px #245F93;
+	width: 40%;
+	float: right;
+	color: #fff !important; 
+}
+
+#ver-noticias:hover {
+	background-color: #245F93 !important;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
 
 /* ----Start------ */
 
@@ -336,6 +390,7 @@ h2.title-tv {
 	padding: 10px 22px;
 	position: relative;
 	margin-bottom: 10px;
+	display: block;
 }
 
 .title-curso-item {
@@ -452,14 +507,14 @@ a.saiba-mais-curso:hover {
 
 }
 
-#noticias a {
+#noticias .noticias-item a {
 	display: block;
 	margin-top: 20px;
 	overflow: auto;
 	color: #AAAAAA !important;
 }
 
-#noticias a:hover {
+#noticias .noticias-item  a:hover {
 	color: #256093 !important;
 }
 
@@ -502,7 +557,7 @@ a.saiba-mais-curso:hover {
 	margin-top: 20px;
 	background-color: #7DA9D0;
 	min-height: 248px;
-	padding: 20px 20px 10px 20px;
+	padding: 20px 20px 29px 20px;
 
 }
 .content-depoimentos .autor {
@@ -639,19 +694,19 @@ color: #fff;
 }
 
 #informacoes h3 {	
-	width: 132px;
+	width: 140px;
 }
 
 #minha-conta h3 {	
-	width: 135px;
-}
-
-#fale-conosco h3 {	
 	width: 145px;
 }
 
+#fale-conosco h3 {	
+	width: 155px;
+}
+
 #newsletter h3 {	
-	width: 115px;
+	width: 125px;
 }
 
 .box-footer p {
